--- a/index.html
+++ b/index.html
@@ -321,52 +321,48 @@ navLinks.forEach(link => {
 
 <!-- Footer -->
 <footer style="background:#0d47a1; color:#fff; padding:60px 20px; font-family:Arial, sans-serif;">
-  <div style="display:flex; flex-wrap:wrap; justify-content:space-between; max-width:1200px; margin:0 auto; gap:30px;">
-    
+  <div style="display:flex; flex-wrap:wrap; justify-content:space-between; max-width:1200px; margin:0 auto; gap:30px; align-items:flex-start;">
+
     <!-- Logo & About -->
     <div style="flex:1; min-width:220px; text-align:center;">
       <img src="images/logo group.png" alt="Tangent Group Logo" 
            style="max-width:100%; margin-bottom:15px; cursor:pointer;"
            onclick="this.style.filter='hue-rotate(45deg)';">
-      <p style="line-height:1.6;">"The right choice of a successfully organization is not in your future Employees but in the team helping you to discover them."</p>
-      <!-- Footer Social Icons -->
-<!-- Footer Social Icons -->
-<div style="display:flex; gap:10px; justify-content:center; margin-top:15px;">
-  <a href="https://www.facebook.com/profile.php?id=61577614177171" target="_blank"
-     style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#3b5998; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
-     onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-    <i class="fa-brands fa-facebook-f"></i>
-  </a>
+      <p style="line-height:1.6; font-size:0.95em; margin:0;">
+        "The right choice of a successful organization is not in your future employees but in the team helping you to discover them."
+      </p>
+      <!-- Social Icons -->
+      <div style="display:flex; gap:10px; justify-content:center; margin-top:15px;">
+        <a href="https://www.facebook.com/profile.php?id=61577614177171" target="_blank"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#3b5998; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
 
-  <a href="https://www.linkedin.com/in/rahuldxbcareers2u/" target="_blank"
-     style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#0077b5; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
-     onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-    <i class="fa-brands fa-linkedin-in"></i>
-  </a>
+        <a href="https://www.linkedin.com/in/rahuldxbcareers2u/" target="_blank"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#0077b5; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
 
-  <a href="https://www.instagram.com/tangent_hr_solution/" target="_blank"
-     style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#e1306c; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
-     onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
+        <a href="https://www.instagram.com/tangent_hr_solution/" target="_blank"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#e1306c; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
 
-  <a href="https://www.tiktok.com/@tangenthrjobs?lang=en" target="_blank"
-     style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#000; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
-     onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-    <i class="fa-brands fa-tiktok"></i>
-  </a>
-</div>
-
-<!-- FontAwesome 6 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
-
-
+        <a href="https://www.tiktok.com/@tangenthrjobs?lang=en" target="_blank"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#000; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+      </div>
     </div>
 
     <!-- Quick Links -->
-    <div style="flex:1; min-width:180px;">
-      <h3 style="margin-bottom:15px; text-align:center;">Quick Links</h3>
-      <ul style="list-style:none; padding:0; margin:0; line-height:2; text-align:center;">
+    <div style="flex:1; min-width:180px; text-align:center;">
+      <h3 style="margin-bottom:15px;">Quick Links</h3>
+      <ul style="list-style:none; padding:0; margin:0; line-height:2;">
         <li><a href="#home" style="color:#fff; text-decoration:none;">Home</a></li>
         <li><a href="#about" style="color:#fff; text-decoration:none;">About Us</a></li>
         <li><a href="#services" style="color:#fff; text-decoration:none;">Our Services</a></li>
@@ -375,10 +371,11 @@ navLinks.forEach(link => {
         <li><a href="#contact" style="color:#fff; text-decoration:none;">Contact</a></li>
       </ul>
     </div>
+
     <!-- Contact Info -->
-    <div style="flex:1; min-width:240px;">
-      <h3 style="margin-bottom:15px; text-align:center;">Contact Information</h3>
-      <p style="margin:0 0 10px 0;"><i class="fas fa-map-marker-alt" style="margin-right:8px;"></i> DMCC, Fortune Tower - Cluster C - Jumeirah Lake Towers - Dubai, UAE</p>
+    <div style="flex:1; min-width:240px; text-align:center;">
+      <h3 style="margin-bottom:15px;">Contact Information</h3>
+      <p style="margin:0 0 10px 0;"><i class="fas fa-map-marker-alt" style="margin-right:8px;"></i>DMCC, Fortune Tower - Cluster C - Jumeirah Lake Towers - Dubai, UAE</p>
       <p style="margin:0 0 10px 0;"><i class="fas fa-phone" style="margin-right:8px;"></i> +971 4 3979686 | 04 - 3465669</p>
       <p style="margin:0;"><i class="fas fa-envelope" style="margin-right:8px;"></i> 
         <a href="mailto:hrteam@emirates.net.ae" style="color:#ffeb3b;">hrteam@emirates.net.ae</a>
@@ -397,56 +394,9 @@ navLinks.forEach(link => {
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
-<!-- Scripts -->
-<script>
-// Slider logic
-let slider = document.getElementById('slider');
-let slides = 5;
-let currentIndex = 0;
-
-function showSlide(index){
-  slider.style.transform = `translateX(-${index * 20}%)`;
-}
-
-document.getElementById('next').addEventListener('click', ()=>{
-  currentIndex = (currentIndex + 1) % slides;
-  showSlide(currentIndex);
-});
-
-document.getElementById('prev').addEventListener('click', ()=>{
-  currentIndex = (currentIndex - 1 + slides) % slides;
-  showSlide(currentIndex);
-});
-
-// Auto-slide every 5s
-setInterval(()=>{
-  currentIndex = (currentIndex +1) % slides;
-  showSlide(currentIndex);
-},5000);
-
-// Scroll animation bottom → top
-const sections = document.querySelectorAll('section, .footer-section');
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if(entry.isIntersecting){
-      entry.target.style.transform = 'translateY(0)';
-      entry.target.style.opacity = '1';
-    }
-  });
-}, { threshold: 0.2 });
-sections.forEach(sec => observer.observe(sec));
-
-// Highlight nav on click
-document.querySelectorAll('#mainNav a').forEach(link => {
-  link.addEventListener('click', function() {
-    document.querySelectorAll('#mainNav a').forEach(l => l.style.color = 'white');
-    this.style.color = 'yellow';
-  });
-});
-</script>
-
 </body>
 </html>
+
 
 
 
