--- a/index.html
+++ b/index.html
@@ -20,51 +20,51 @@
 </header>
 
 <!-- Slider Section -->
-<section id="home" style="position:relative; height:35vh; overflow:hidden; margin-top:0;">
+<section id="home" style="position:relative; height:50vh; overflow:hidden; margin-top:0;">
   <div id="slider" style="display:flex; width:500%; height:100%; transition: transform 0.8s ease-in-out;">
     
     <!-- Slide 1 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/office.jpeg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2em; color:red;">Tangent Group - UAE</h2>
-        <p style="margin:0 0 15px 0; font-size:1em; color:blue;">27 Years of Excellence in Recruitment & Workforce Solutions</p>
-        <button style="padding:8px 16px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Tangent Group - UAE</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">27 Years of Excellence in Recruitment & Workforce Solutions</p>
+        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 2 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/cosnt2.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2em; color:red;">Engineering & Contracting Sector</h2>
-        <p style="margin:0 0 15px 0; font-size:1em; color:blue;">Expert staffing and innovative solutions for engineering and construction projects.</p>
-        <button style="padding:8px 16px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Engineering & Contracting Sector</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Expert staffing and innovative solutions for engineering and construction projects.</p>
+        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 3 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/eng.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2em; color:red;">Interior Decoration</h2>
-        <p style="margin:0 0 15px 0; font-size:1em; color:blue;">Expert staffing and solutions for interior & construction projects.</p>
-        <button style="padding:8px 16px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Interior Decoration</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Expert staffing and solutions for interior & construction projects.</p>
+        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 4 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/hospitality.jpeg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2em; color:red;">FMCG & Hospitality</h2>
-        <p style="margin:0 0 15px 0; font-size:1em; color:blue;">Skilled staffing and solutions for FMCG & hospitality sectors.</p>
-        <button style="padding:8px 16px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">FMCG & Hospitality</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Skilled staffing and solutions for FMCG & hospitality sectors.</p>
+        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 5 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/Guard.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2em; color:red;">Security & Cleaning Sector</h2>
-        <p style="margin:0 0 15px 0; font-size:1em; color:blue;">Reliable staffing and solutions for security & cleaning services.</p>
-        <button style="padding:8px 16px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Security & Cleaning Sector</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Reliable staffing and solutions for security & cleaning services.</p>
+        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
@@ -101,7 +101,6 @@ setInterval(()=> {
   showSlide(currentIndex);
 },5000);
 </script>
-
 
 <!-- Elegant Navigation Menu -->
 <nav id="mainNav" style="width:100%; background:#0d47a1; display:flex; justify-content:center; gap:25px; padding:15px 0; position:sticky; top:70px; z-index:999; font-family:Arial, sans-serif;">
@@ -326,7 +325,7 @@ navLinks.forEach(link => {
     <!-- Logo & About -->
     <div style="flex:1; min-width:220px; text-align:center;">
       <img src="images/logo group.png" alt="Tangent Group Logo" 
-           style="max-width:100%; margin-bottom:15px; cursor:pointer;"
+           style="max-width:150px; margin-bottom:15px; cursor:pointer;"
            onclick="this.style.filter='hue-rotate(45deg)';">
       <p style="line-height:1.6; font-size:0.95em; margin:0;">
         "The right choice of a successful organization is not in your future employees but in the team helping you to discover them."
@@ -393,9 +392,9 @@ navLinks.forEach(link => {
 <!-- FontAwesome for icons -->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-
 </body>
 </html>
+
 
 
 
