--- a/index.html
+++ b/index.html
@@ -321,39 +321,38 @@ navLinks.forEach(link => {
 <!-- Footer -->
 <footer style="background:#0d47a1; color:#fff; padding:60px 20px; font-family:Arial, sans-serif;">
   <div style="display:flex; flex-wrap:wrap; justify-content:space-between; max-width:1200px; margin:0 auto; gap:30px; align-items:flex-start;">
-
+    
     <!-- Logo & About -->
     <div style="flex:1; min-width:220px; text-align:center;">
       <img src="images/logo group.png" alt="Tangent Group Logo" 
            style="max-width:150px; margin-bottom:15px; cursor:pointer;"
            onclick="this.style.filter='hue-rotate(45deg)';">
-      <p style="line-height:1.6; font-size:0.95em; margin:0;">
-        "The right choice of a successful organization is not in your future employees but in the team helping you to discover them."
-      </p>
+      <p style="line-height:1.6;">"The right choice of a successful organization is not in your future employees but in the team helping you discover them."</p>
+      
       <!-- Social Icons -->
-      <div style="display:flex; gap:10px; justify-content:center; margin-top:15px;">
+      <div style="display:flex; gap:10px; justify-content:center; margin-top:15px; font-size:18px;">
         <a href="https://www.facebook.com/profile.php?id=61577614177171" target="_blank"
-           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#3b5998; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#3b5998; align-items:center; justify-content:center; text-decoration:none; color:#fff;"
            onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
 
         <a href="https://www.linkedin.com/in/rahuldxbcareers2u/" target="_blank"
-           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#0077b5; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#0077b5; align-items:center; justify-content:center; text-decoration:none; color:#fff;"
            onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fab fa-linkedin-in"></i>
         </a>
 
         <a href="https://www.instagram.com/tangent_hr_solution/" target="_blank"
-           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#e1306c; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#e1306c; align-items:center; justify-content:center; text-decoration:none; color:#fff;"
            onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-          <i class="fa-brands fa-instagram"></i>
+          <i class="fab fa-instagram"></i>
         </a>
 
         <a href="https://www.tiktok.com/@tangenthrjobs?lang=en" target="_blank"
-           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#000; align-items:center; justify-content:center; text-decoration:none; color:#fff; font-size:18px;"
+           style="display:inline-flex; width:40px; height:40px; border-radius:50%; background:#000; align-items:center; justify-content:center; text-decoration:none; color:#fff;"
            onmouseover="this.style.color='yellow'" onmouseout="this.style.color='white'">
-          <i class="fa-brands fa-tiktok"></i>
+          <i class="fab fa-tiktok"></i>
         </a>
       </div>
     </div>
@@ -374,7 +373,7 @@ navLinks.forEach(link => {
     <!-- Contact Info -->
     <div style="flex:1; min-width:240px; text-align:center;">
       <h3 style="margin-bottom:15px;">Contact Information</h3>
-      <p style="margin:0 0 10px 0;"><i class="fas fa-map-marker-alt" style="margin-right:8px;"></i>DMCC, Fortune Tower - Cluster C - Jumeirah Lake Towers - Dubai, UAE</p>
+      <p style="margin:0 0 10px 0;"><i class="fas fa-map-marker-alt" style="margin-right:8px;"></i> DMCC, Fortune Tower - Cluster C - Jumeirah Lake Towers - Dubai, UAE</p>
       <p style="margin:0 0 10px 0;"><i class="fas fa-phone" style="margin-right:8px;"></i> +971 4 3979686 | 04 - 3465669</p>
       <p style="margin:0;"><i class="fas fa-envelope" style="margin-right:8px;"></i> 
         <a href="mailto:hrteam@emirates.net.ae" style="color:#ffeb3b;">hrteam@emirates.net.ae</a>
@@ -389,11 +388,13 @@ navLinks.forEach(link => {
   </div>
 </footer>
 
-<!-- FontAwesome for icons -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<!-- FontAwesome 6 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
+
 
 
 
