--- a/index.html
+++ b/index.html
@@ -20,86 +20,85 @@
 </header>
 
 <!-- Slider Section -->
-<section id="home" style="position:relative; height:50vh; overflow:hidden; margin-top:0;">
+<section id="home" style="position:relative; height:60vh; overflow:hidden; margin-top:0;">
   <div id="slider" style="display:flex; width:500%; height:100%; transition: transform 0.8s ease-in-out;">
     
     <!-- Slide 1 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/office.jpeg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Tangent Group - UAE</h2>
-        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">27 Years of Excellence in Recruitment & Workforce Solutions</p>
-        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em;">Tangent Group - UAE</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em;">27 Years of Excellence in Recruitment & Workforce Solutions</p>
+        <button style="padding:10px 20px; background:#0d47a1; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/cosnt2.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Engineering & Contracting Sector</h2>
-        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Expert staffing and innovative solutions for engineering and construction projects.</p>
-        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+    <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/const2.jpg') center/cover no-repeat; position:relative;">
+      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em;">Engineering & Contracting Sector</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em;">Expert staffing and innovative solutions for engineering and construction projects.</p>
+        <button style="padding:10px 20px; background:#0d47a1; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 3 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/eng.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Interior Decoration</h2>
-        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Expert staffing and solutions for interior & construction projects.</p>
-        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em;">Interior Decoration</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em;">Expert staffing and solutions for interior projects.</p>
+        <button style="padding:10px 20px; background:#0d47a1; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 4 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/hospitality.jpeg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">FMCG & Hospitality</h2>
-        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Skilled staffing and solutions for FMCG & hospitality sectors.</p>
-        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em;">FMCG & Hospitality</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em;">Skilled staffing and solutions for FMCG & hospitality sectors.</p>
+        <button style="padding:10px 20px; background:#0d47a1; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
     <!-- Slide 5 -->
     <div class="slide" style="flex:0 0 20%; height:100%; background:url('images/Guard.jpg') center/cover no-repeat; position:relative;">
-      <div class="slide-content" style="position:absolute; bottom:20%; left:10%; color:white;">
-        <h2 style="margin:0 0 10px 0; font-size:2.5em; color:red;">Security & Cleaning Sector</h2>
-        <p style="margin:0 0 15px 0; font-size:1.2em; color:blue;">Reliable staffing and solutions for security & cleaning services.</p>
-        <button style="padding:10px 20px; background:red; color:white; border:none; cursor:pointer;">Learn More</button>
+      <div class="slide-content" style="position:absolute; bottom:15%; left:10%; color:white;">
+        <h2 style="margin:0 0 10px 0; font-size:2.5em;">Security & Cleaning Sector</h2>
+        <p style="margin:0 0 15px 0; font-size:1.2em;">Reliable staffing and solutions for security & cleaning services.</p>
+        <button style="padding:10px 20px; background:#0d47a1; color:white; border:none; cursor:pointer;">Learn More</button>
       </div>
     </div>
 
   </div>
 
   <!-- Slider Arrows -->
-  <button id="prev" style="position:absolute; top:50%; left:20px; transform:translateY(-50%); font-size:2em; background:rgba(255,0,0,0.5); color:white; border:none; cursor:pointer; z-index:10; padding:5px 10px;">&#10094;</button>
-  <button id="next" style="position:absolute; top:50%; right:20px; transform:translateY(-50%); font-size:2em; background:rgba(255,0,0,0.5); color:white; border:none; cursor:pointer; z-index:10; padding:5px 10px;">&#10095;</button>
+  <button id="prev" style="position:absolute; top:50%; left:20px; transform:translateY(-50%); font-size:2em; background:rgba(0,0,0,0.3); color:white; border:none; cursor:pointer; z-index:10; padding:5px 10px;">&#10094;</button>
+  <button id="next" style="position:absolute; top:50%; right:20px; transform:translateY(-50%); font-size:2em; background:rgba(0,0,0,0.3); color:white; border:none; cursor:pointer; z-index:10; padding:5px 10px;">&#10095;</button>
 </section>
 
-<!-- Slider Script -->
 <script>
 let slider = document.getElementById('slider');
-let slides = 5;
+let slides = slider.children.length;
 let currentIndex = 0;
 
 function showSlide(index){
   slider.style.transform = `translateX(-${index * 20}%)`;
 }
 
-document.getElementById('next').addEventListener('click', ()=> {
+document.getElementById('next').addEventListener('click', () => {
   currentIndex = (currentIndex + 1) % slides;
   showSlide(currentIndex);
 });
 
-document.getElementById('prev').addEventListener('click', ()=> {
+document.getElementById('prev').addEventListener('click', () => {
   currentIndex = (currentIndex - 1 + slides) % slides;
   showSlide(currentIndex);
 });
 
 // Auto-slide every 5s
-setInterval(()=> {
-  currentIndex = (currentIndex +1) % slides;
+setInterval(() => {
+  currentIndex = (currentIndex + 1) % slides;
   showSlide(currentIndex);
-},5000);
+}, 5000);
 </script>
 
 <!-- Elegant Navigation Menu -->
@@ -394,6 +393,7 @@ navLinks.forEach(link => {
 
 </body>
 </html>
+
 
 
 
