--- a/index.html
+++ b/index.html
@@ -189,11 +189,30 @@
       </ul>
     </div>
     <div style="flex:1; min-width:240px; text-align:center;">
-      <h3>Contact Info</h3>
-      <p>DMCC, Fortune Tower, Jumeirah Lake Towers, Dubai, UAE</p>
-      <p>+971 4 3979686 | 04 - 3465669</p>
-      <p><a href="mailto:hrteam@emirates.net.ae" style="color:#ffeb3b;">hrteam@emirates.net.ae</a></p>
-    </div>
+  <h3>Contact Info</h3>
+  <p>
+    <span style="display:inline-block; vertical-align:middle; width:18px; height:18px;">
+      <!-- Location Icon SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffeb3b"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5 14.5 7.62 14.5 9 13.38 11.5 12 11.5z"/></svg>
+    </span>
+    DMCC, Fortune Tower, Jumeirah Lake Towers, Dubai, UAE
+  </p>
+  <p>
+    <span style="display:inline-block; vertical-align:middle; width:18px; height:18px;">
+      <!-- Phone Icon SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffeb3b"><path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.11-.21 11.36 11.36 0 003.55.57 1 1 0 011 1v3.25a1 1 0 01-1 1C10.91 21.5 2.5 13.09 2.5 3a1 1 0 011-1h3.25a1 1 0 011 1c0 1.22.2 2.42.57 3.55a1 1 0 01-.21 1.11l-2.2 2.2z"/></svg>
+    </span>
+    +971 4 3979686 | 04 - 3465669
+  </p>
+  <p>
+    <span style="display:inline-block; vertical-align:middle; width:18px; height:18px;">
+      <!-- Email Icon SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffeb3b"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+    </span>
+    <a href="mailto:hrteam@emirates.net.ae" style="color:#ffeb3b;">hrteam@emirates.net.ae</a>
+  </p>
+</div>
+
   </div>
   <div style="margin-top:40px; border-top:1px solid #1556b0; padding-top:20px; text-align:center; font-size:14px; color:#ddd;">© 2025 Tangent Group | All Rights Reserved</div>
 </footer>
@@ -228,3 +247,4 @@ document.querySelectorAll('#mainNav a').forEach(link=>{
 
 </body>
 </html>
+
