--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section id="home" style="position:relative; height:60vh; overflow:hidden; margin-bottom:0;">
   <div id="slider" style="display:flex; width:500%; height:100%; transition: transform 0.8s ease-in-out;">
     <!-- Slides -->
-    <div style="flex:0 0 20%; height:100%; background:url('images/office.jpeg') center/cover no-repeat; position:relative;">
+    <div style="flex:0 0 20%; height:100%; background:url('images/TANGENT HOME PAGE.jpg') center/cover no-repeat; position:relative;">
       <div style="position:absolute; bottom:15%; left:10%; color:white;">
         <h2 style="margin:0 0 10px 0; font-size:2.5em;">Tangent Group - UAE</h2>
         <p style="margin:0 0 15px 0; font-size:1.2em;">27 Years of Excellence in Recruitment & Workforce Solutions</p>
@@ -247,4 +247,5 @@ document.querySelectorAll('#mainNav a').forEach(link=>{
 
 </body>
 </html>
+
 
